@@ -3,7 +3,7 @@ libc_rtlddir = /lib64
 extra_cflags = -mno-plt
 
 # build 32-bit (n32) alternative library
-EGLIBC_PASSES += mipsn32
+GLIBC_PASSES += mipsn32
 DEB_ARCH_REGULAR_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
 mipsn32_add-ons = ports nptl $(add-ons)
 mipsn32_configure_target = mips64el-linux-gnuabin32
@@ -17,7 +17,7 @@ mipsn32_libdir = /usr/lib32
 mipsn32_extra_config_options := $(extra_config_options) --disable-profile
 
 # build 32-bit (o32) alternative library
-EGLIBC_PASSES += mips32
+GLIBC_PASSES += mips32
 DEB_ARCH_REGULAR_PACKAGES += libc6-mips32 libc6-dev-mips32
 mips32_add-ons = ports nptl $(add-ons)
 mips32_configure_target = mipsel-linux-gnu
