@@ -3,7 +3,7 @@ libc_rtlddir = /lib32
 extra_cflags = -mno-plt
 
 # build 64-bit alternative library
-EGLIBC_PASSES += mips64
+GLIBC_PASSES += mips64
 DEB_ARCH_REGULAR_PACKAGES += libc6-mips64 libc6-dev-mips64
 mips64_add-ons = ports nptl $(add-ons)
 mips64_configure_target = mips64-linux-gnuabi64
@@ -17,7 +17,7 @@ mips64_libdir = /usr/lib64
 mips64_extra_config_options := $(extra_config_options) --disable-profile
 
 # build 32-bit (o32) alternative library
-EGLIBC_PASSES += mips32
+GLIBC_PASSES += mips32
 DEB_ARCH_REGULAR_PACKAGES += libc6-mips32 libc6-dev-mips32
 mips32_add-ons = ports nptl $(add-ons)
 mips32_configure_target = mips-linux-gnu
