@@ -1,6 +1,7 @@
 glibc (2.19-5) UNRELEASED; urgency=medium
 
-  * 
+  [ Aurelien Jarno ]
+  * debian/sysdeps/mips*.mk: replace EGLIBC_PASSES into GLIBC_PASSES.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 23 Jun 2014 21:19:57 +0200
 
